--- a/complaint-app/package.json
+++ b/complaint-app/package.json
@@ -16,7 +16,8 @@
     "firebase": "^10.13.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "eslint": "^8",
