--- a/complaint-app/package.json
+++ b/complaint-app/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.5",
     "openai": "^4.56.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "eslint": "^8",
