--- a/complaint-app/package.json
+++ b/complaint-app/package.json
@@ -18,6 +18,7 @@
     "openai": "^4.56.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
