--- a/complaint-app/package.json
+++ b/complaint-app/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "firebase": "^10.13.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.5",
     "openai": "^4.56.0",
     "react": "^18",
