--- a/complaint-app/package.json
+++ b/complaint-app/package.json
@@ -12,9 +12,14 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@google-cloud/speech": "^6.7.0",
+    "@langchain/community": "^0.2.28",
+    "@langchain/core": "^0.2.27",
+    "@langchain/openai": "^0.2.7",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "firebase": "^10.13.0",
+    "hnswlib-node": "^3.0.0",
+    "langchain": "^0.2.16",
     "next": "14.2.5",
     "openai": "^4.56.0",
     "react": "^18",
