--- a/complaint-app/package.json
+++ b/complaint-app/package.json
@@ -17,12 +17,14 @@
     "@langchain/openai": "^0.2.7",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "chart.js": "^4.4.3",
     "firebase": "^10.13.0",
     "hnswlib-node": "^3.0.0",
     "langchain": "^0.2.16",
     "next": "14.2.5",
     "openai": "^4.56.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "recharts": "^2.12.7"
