--- a/complaint-app/package.json
+++ b/complaint-app/package.json
@@ -21,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "tesseract.js": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "^8",
